Add email-validator dependency and update port configuration

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,11 @@ GOOGLE_REFRESH_TOKEN=your-refresh-token
 
 # API Settings
 API_HOST=0.0.0.0
-API_PORT=8000
+API_PORT=8001
 API_DEBUG=True
+
+# Server Configuration
+PORT=8001
 
 # Security
 API_KEY=your-secure-api-key  # Für die Authentifizierung von Botpress
